--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,12 +12,34 @@
     {% block stylesheets %}{% endblock %}
     
     {% block javascripts %}{% endblock %}
+    <style>
+    nav {
+        opacity: 0.5;
+        transition: 0.5s;
+    }
+    nav:hover {
+        opacity: 1;
+    }
+    a.active {
+        text-decoration: underline;
+    }
+</style>
 </head>
 
 <body>
     {% include "components/navbar.html.twig" %}
     
     {% block body %}{% endblock %}
+
+    {# Select active link in navbar #}
+    <script>
+        let path = window.location.pathname;
+        //console.log(path);
+        let navlink = document.querySelector('[href="'+path+'"]');
+        navlink.classList.add('active');
+        navlink.setAttribute("aria-current","true");
+        //console.log(document.querySelectorAll(".nav-link"));
+    </script>
 
     {# Bootstrap #}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
